--- a/index.html
+++ b/index.html
@@ -96,17 +96,7 @@
                         <a href="hello-arrokenru/index.html">Урок 1</a>
                     </li>
                     <li class="content__list-item">
-                        <a href="homework-1/index.html">Урок 2</a>
-                    </li>
-                    <li class="content__list-item">
-                        <a href="homework-2/index.html">Урок 3</a>
-                    </li>
-                    <li class="content__list-item">
-                        <a href="homework-3/index.html">Урок 4</a>
-                    </li>
-                    <li class="content__list-item">
-                        <a href="homework-4/index.html">Урок 5</a>
-                    </li>
+                        <a href="homework/index.html">Урок 2</a>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
@@ -127,6 +117,7 @@
 <script src="src/index.js"></script>
 </body>
 </html>
+
 
 
 
